--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -1,2 +1,7 @@
-@import "../../node_modules/bootstrap/scss/bootstrap-reboot.scss";
 @import "../../node_modules/bootstrap/scss/bootstrap-grid.scss";
+@import "./header";
+@import "./footer";
+
+body {
+  margin-top: 30px;
+}
